<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/deep_blue"
    tools:context=".Filters">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/deep_blue">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageview_filter_back"
                    android:layout_width="16dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/btn_back_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/filters"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.369"
                    app:layout_constraintStart_toEndOf="@+id/imageview_filter_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.529" />

                <ImageView
                    android:id="@+id/imageView_cart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.917"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/cart_icon_1"
                    tools:ignore="MissingConstraints,VectorDrawableCompat"
                    tools:layout_editor_absoluteY="18dp" />

                <TextView
                    android:id="@+id/textView_filter_cartNumber"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/shape_round_cyan"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_shoppingcart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.94"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@color/gray3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_filter_men"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/men"
            android:textColor="@color/black"
            android:background="@drawable/shape_rect_gray"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_filter_women"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/women"
            android:textColor="@color/black"
            android:background="@drawable/shape_rect_gray"
            android:gravity="center"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/textView_filter_kids"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/kids"
            android:textColor="@color/black"
            android:background="@drawable/shape_rect_gray"
            android:gravity="center"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_filter_shoes"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/shoes"
            android:textColor="@color/black"
            android:background="@drawable/shape_rect_gray"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_filter_accessories"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/Accessories"
            android:textColor="@color/black"
            android:background="@drawable/shape_rect_gray"
            android:gravity="center"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        />

        <ImageView
            android:id="@+id/imageview_filter_price_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="312dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </LinearLayout>

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/rangeseekbar_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100000"
        app:values="@array/initial_slider_values"/>

    <TextView
        android:id="@+id/textview_filter_price_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="$10.00-$5000.00"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageview_filter_colors_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="301dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray3"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sortby"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textview_filter_sortby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_popular"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"
            />

        <ImageView
            android:id="@+id/imageview_filter_sortBy_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="118dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textview_filter_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:text="XL"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview_filter_size_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="157dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textview_filter_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120.5dp"
            android:text="RANDY"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview_filter_brand_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="142dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_filter_applyfilter"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/apply_filter"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/shape_rect_cyan"/>


        <Button
            android:id="@+id/button_filter_clear_all"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:text="@string/clear_all"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/shape_rect_gray"/>

    </LinearLayout>

    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
        android:id="@+id/bottomNavigation_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:mbn_circleColor="@color/cyan"
        app:mbn_backgroundBottomColor="@color/white"
        />

</LinearLayout>