<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SmsVerification">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageview_verification_back"
                    android:layout_width="16dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/btn_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/SV"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toEndOf="@+id/imageview_verification_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.582" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/phone_icon"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textSize="22sp"
        android:textColor="@color/cyan"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textview_verification_codesent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_sent"
        android:textSize="13sp"
        android:textColor="@color/gray6"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

        <com.chaos.view.PinView
            android:id="@+id/pinView_verificationn_OTP"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="18sp"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="20dp"
            app:lineColor="@color/cyan"
            app:viewType="rectangle" />

    <Button
        android:id="@+id/button_verification_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/shape_rect_cyan"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        />

    <Button
        android:id="@+id/button_verification_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_rect_white"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/gray6"
        android:textSize="17sp"
        />
</LinearLayout>